default/objects/E2E_Data_Locator_Item__c/E2E_Data_Locator_Item__c.object-meta.xml
<CustomObject>
    <label>E2E Data Locator Item</label>
    <nameField>
        <label>E2E Data Locator Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>E2E Data Locator Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>