default/objects/E2E_Data_Locator_Item__c/fields/E2E_Data_Product__c.field-meta.xml
<CustomField>
    <fullName>E2E_Data_Product__c</fullName>
    <label>E2E Data Product</label>
    <referenceTo>E2E_Data_Product__c</referenceTo>
    <relationshipLabel>E2E Data Locator Items</relationshipLabel>
    <relationshipName>E2E_Data_Locator_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>