default/objects/E2E_Data_Locator_Item__c/fields/ESI__c.field-meta.xml
<CustomField>
    <fullName>ESI__c</fullName>
    <label>ESI</label>
    <length>15</length>
    <type>Text</type>
</CustomField>