default/objects/E2E_Data_Locator_Item__c/recordTypes/Network.recordType-meta.xml
<RecordType>
    <fullName>Network</fullName>
    <active>true</active>
    <label>Network</label>
</RecordType>