default/objects/E2E_Data_Locator_Item__c/recordTypes/Station.recordType-meta.xml
<RecordType>
    <fullName>Station</fullName>
    <active>true</active>
    <label>Station</label>
</RecordType>